<resources xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Backbone</string>
    <string name="app_description">A 4.0+ file manager.</string>
    <string name="size_bytes" translatable="false">B</string>
    <string name="size_kilobytes" translatable="false">kB</string>
    <string name="size_megabytes" translatable="false">MB</string>
    <string name="size_gigabytes" translatable="false">GB</string>
    <string name="datetime_format_order">%1$s %2$s</string>
    <string name="device_blockdevice">Block device</string>
    <string name="device_characterdevice">Character device</string>
    <string name="device_namedpipe">Named pipe</string>
    <string name="device_domainsocket">Domain socket</string>
    <string name="mount_point_readonly">RO</string>
    <string name="mount_point_readwrite">RW</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all">All</string>
    <string name="overwrite">Overwrite</string>
    <string name="select">Select</string>
    <string name="root_directory_name"><![CDATA[<Root folder>]]></string>
    <string name="search_result_name">Search:
        <xliff:g id="terms">%1$s</xliff:g>
    </string>
    <string name="loading_message">Loading\u2026</string>
    <string name="computing_message" translatable="false">
        <xliff:g id="data">%1$s</xliff:g>
    </string>
    <string name="computing_message_ln" translatable="false">
        <xliff:g id="data">%1$s</xliff:g>
    </string>
    <string name="cancelled_message">Cancelled.</string>
    <string name="error_message">Error.</string>
    <string name="copy_text_cd">Tap to copy text to clipboard</string>
    <string name="copy_text_msg">Text copied to clipboard</string>
    <string name="warning_title">Warning</string>
    <string name="error_title">Error detected</string>
    <string name="confirm_operation">Confirm operation</string>
    <string name="confirm_overwrite">Confirm overwrite</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="msgs_change_to_prompt_access_mode_title">Confirm switch</string>
    <string name="msgs_change_to_prompt_access_mode_msg">
        Unable to run in Root Access mode. Changing to Safe mode.\n\nApply this change?
    </string>
    <string name="msgs_cant_create_console">Unable to gain the required privileges to function.</string>
    <string name="msgs_privileged_console_alloc_failed">Unable to run in Root Access mode.
        Changing to Safe mode.
    </string>
    <string name="msgs_settings_save_failure">The setting could not be applied or stored.</string>
    <string name="msgs_settings_invalid_initial_directory">The initial folder
        \"<xliff:g id="initial_dir">%1$s</xliff:g>\" is invalid. Changing to root folder.
    </string>
    <string name="msgs_success">The operation was completed successfully.</string>
    <string name="msgs_unknown">An error was detected. The operation was unsuccessful.</string>
    <string name="msgs_insufficient_permissions">This operation requires elevated permissions. Try
        changing to Root Access mode.
    </string>
    <string name="msgs_file_not_found">The file or folder was not found.</string>
    <string name="msgs_command_not_found">The operation\'s command was not found or has an
        invalid definition.
    </string>
    <string name="msgs_io_failed">Read/write failure.</string>
    <string name="msgs_operation_timeout">The operation timed out.</string>
    <string name="msgs_operation_failure">The operation failed.</string>
    <string name="msgs_console_alloc_failure">An internal error occurred.</string>
    <string name="msgs_operation_can_not_be_cancelled">The operation cannot be cancelled.</string>
    <string name="msgs_read_only_filesystem">The file system is read-only. Try to mount the
        file system as read-write before attepting the operation.
    </string>
    <string name="msgs_illegal_argument">Illegal argument. Invocation failed.</string>
    <string name="msgs_unresolved_inconsistencies">
        The operation is not permitted because it would create inconsistencies.
    </string>
    <string name="msgs_operation_not_allowed_in_current_directory">
        The operation is not permitted in current folder.\n\nDestination folder cannot be subfolder
        of source or be same as source.
    </string>
    <string name="msgs_push_again_to_exit">Press again to exit.</string>
    <string name="msgs_not_registered_app">There is no application registered to handle
        the type of file selected.
    </string>
    <string name="msgs_overwrite_files">
        Some of the files already exist in the destination folder.\n\nOverwrite?
    </string>
    <string name="msgs_action_association_failed">Associating the action to the
        application failed.
    </string>
    <string name="advise_insufficient_permissions">The operation requires elevated privileges.\n\n
        Do you want to change to Root Access mode?
    </string>
    <string name="parent_dir">Parent folder</string>
    <string name="external_storage">External storage</string>
    <string name="internal_storage">Internal storage</string>
    <string name="usb_storage">USB storage</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="actionbar_button_filesystem_cd">File system info</string>
    <string name="actionbar_button_sort_mode_cd">Sort mode</string>
    <string name="actionbar_button_layout_mode_cd">Layout mode</string>
    <string name="actionbar_button_other_view_options_cd">Other view options</string>
    <string name="actionbar_button_selection_done_cd">Done</string>
    <string name="actionbar_button_actions_cd">Actions</string>
    <string name="actionbar_button_history_cd">History</string>
    <string name="actionbar_button_bookmarks_cd">Bookmarks</string>
    <string name="actionbar_button_search_cd">Search</string>
    <string name="actionbar_button_overflow_cd">More options</string>
    <string name="actionbar_button_storage_cd">Storage volumes</string>
    <string name="actionbar_button_save_cd">Save</string>
    <string name="sort_by_name_asc">By name &#x25B2;</string>
    <string name="sort_by_name_desc">By name &#x25BC;</string>
    <string name="sort_by_date_asc">By date &#x25B2;</string>
    <string name="sort_by_date_desc">By date &#x25BC;</string>
    <string name="layout_icons">Icons</string>
    <string name="layout_simple">Simple</string>
    <string name="layout_details">Details</string>
    <string name="cm_filemanager_show_dirs_first">Show folders first</string>
    <string name="cm_filemanager_show_hidden">Show hidden files</string>
    <string name="cm_filemanager_show_system">Show system files</string>
    <string name="cm_filemanager_show_symlinks">Show symlinks</string>
    <string name="filesystem_info_warning_title">No information</string>
    <string name="filesystem_info_warning_msg">There is no information available for the file system.</string>
    <string name="filesystem_info_cant_be_mounted_msg">
        The file system cannot be mounted/unmounted.
    </string>
    <string name="filesystem_info_mount_not_allowed_msg">File system mounting operations are not allowed
        in Safe mode. Tap to change to Root Access mode.
    </string>
    <string name="filesystem_info_mount_failed_msg">File system mounting operation failed.
        Some file systems, like SD cards, cannot be mounted/unmounted because
        they are built-in as read-only file systems.
    </string>
    <string name="filesystem_info_dialog_title">File system information</string>
    <string name="filesystem_info_dialog_tab_info">Info</string>
    <string name="filesystem_info_dialog_tab_disk_usage">Disk usage</string>
    <string name="filesystem_info_dialog_status">Status:</string>
    <string name="filesystem_info_dialog_mount_point">Mount point:</string>
    <string name="filesystem_info_dialog_device">Device:</string>
    <string name="filesystem_info_dialog_type">Type:</string>
    <string name="filesystem_info_dialog_options">Options:</string>
    <string name="filesystem_info_dialog_dump_pass">Dump / Pass:</string>
    <string name="filesystem_info_dialog_total_disk_usage">Total:</string>
    <string name="filesystem_info_dialog_used_disk_usage">Used:</string>
    <string name="filesystem_info_dialog_free_disk_usage">Free:</string>
    <string name="fso_properties_permissions_not_allowed_msg">Permissions operations are not allowed
        in Safe mode. Tap to change to Root Access mode.
    </string>
    <string name="fso_properties_failed_to_change_owner_msg">The change of owner operation failed.\n\n
        For security reasons, some file systems, like SD cards, do not allow the changing of ownership.
    </string>
    <string name="fso_properties_failed_to_change_group_msg">The change of group operation failed.\n\n
        For security reasons, some file systems, like SD cards, do not allow the changing of groups.
    </string>
    <string name="fso_properties_failed_to_change_permission_msg">The change of permissions
        operation failed.\n\nFor security reasons, some file systems, like SD cards, do not allow the changing of
        permissions.
    </string>
    <string name="fso_properties_dialog_title">Properties</string>
    <string name="fso_properties_dialog_tab_info">Info</string>
    <string name="fso_properties_dialog_tab_permissions">Permissions</string>
    <string name="fso_properties_dialog_name">Name:</string>
    <string name="fso_properties_dialog_parent">Parent:</string>
    <string name="fso_properties_dialog_type">Type:</string>
    <string name="fso_properties_dialog_category">Category:</string>
    <string name="fso_properties_dialog_link">Link:</string>
    <string name="fso_properties_dialog_size">Size:</string>
    <string name="fso_properties_dialog_contains">Contains:</string>
    <string name="fso_properties_dialog_last_accessed_date">Accessed:</string>
    <string name="fso_properties_dialog_last_modified_date">Modified:</string>
    <string name="fso_properties_dialog_last_changed_date">Changed:</string>
    <string name="menu_history">History</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="actions_menu_properties_current_folder">Properties</string>
    <string name="actions_menu_refresh">Refresh</string>
    <string name="actions_menu_new_file">New file</string>
    <string name="actions_menu_paste_selection">Paste selection here</string>
    <string name="actions_menu_move_selection">Move selection here</string>
    <string name="actions_menu_delete_selection">Delete selection</string>
    <string name="actions_menu_compress_selection">Compress selection</string>
    <string name="actions_menu_create_link">Create link</string>
    <string name="actions_menu_open">Open</string>
    <string name="actions_menu_open_with">Open with</string>
    <string name="actions_menu_execute">Execute</string>
    <string name="actions_menu_send">Send</string>
    <string name="actions_menu_send_selection">Send selection</string>
    <string name="actions_menu_compress">Compress</string>
    <string name="actions_menu_extract">Extract</string>
    <string name="actions_menu_delete">Delete</string>
    <string name="actions_menu_rename">Rename</string>
    <string name="actions_menu_copy">Create copy</string>
    <string name="actions_menu_properties">Properties</string>
    <string name="actions_menu_add_to_bookmarks">Add to bookmarks</string>
    <string name="actions_menu_add_shortcut">Add shortcut</string>
    <string name="actions_menu_compute_checksum">Compute checksum</string>
</resources>