<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2013 BrandroidTools

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/mnu_actions_delete"
            android:icon="?attr/actionIconDelete"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_delete"/>
    <item
            android:id="@+id/mnu_actions_create_link_global"
            android:icon="?attr/actionIconCreateLinkGlobal"
            android:showAsAction="never"
            android:title="@string/actions_menu_create_link"/>
    <item
            android:id="@+id/mnu_actions_send"
            android:icon="?attr/actionIconSend"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_send"/>
    <item
            android:id="@+id/mnu_actions_open"
            android:icon="?attr/actionIconOpen"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_open"/>
    <item
            android:id="@+id/mnu_actions_open_with"
            android:icon="?attr/actionIconOpenWith"
            android:showAsAction="never"
            android:title="@string/actions_menu_open_with"/>
    <item
            android:id="@+id/mnu_actions_rename"
            android:icon="?attr/actionIconRename"
            android:showAsAction="never"
            android:title="@string/actions_menu_rename"/>
    <item
            android:id="@+id/mnu_actions_compress"
            android:icon="?attr/actionIconCompress"
            android:showAsAction="never"
            android:title="@string/actions_menu_compress"/>
    <item
            android:id="@+id/mnu_actions_extract"
            android:icon="?attr/actionIconExtract"
            android:showAsAction="never"
            android:title="@string/actions_menu_extract"/>
    <item
            android:id="@+id/mnu_actions_compute_checksum"
            android:icon="?attr/actionIconChecksum"
            android:showAsAction="never"
            android:title="@string/actions_menu_compute_checksum"/>
    <item
            android:id="@+id/mnu_actions_create_link"
            android:icon="?attr/actionIconCreateLink"
            android:showAsAction="never"
            android:title="@string/actions_menu_create_link"/>
    <item
            android:id="@+id/mnu_actions_execute"
            android:icon="?attr/actionIconExecute"
            android:showAsAction="never"
            android:title="@string/actions_menu_execute"/>
    <item
            android:id="@+id/mnu_actions_add_to_bookmarks"
            android:icon="?attr/actionIconAddBookmark"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_add_to_bookmarks"/>
    <item
            android:id="@+id/mnu_actions_add_shortcut"
            android:icon="?attr/actionIconAddShortcut"
            android:showAsAction="never"
            android:title="@string/actions_menu_add_shortcut"/>

</menu>